--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,3 +6,12 @@
 .app-heading {
     font-weight: bold;
 }
+
+html{
+-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+}
