--- a/dashboard/apps/file_executer/css/style.css
+++ b/dashboard/apps/file_executer/css/style.css
@@ -1,8 +1,356 @@
-/* Put your CSS here */
-.ember-application {
-    margin: 20px;
+/* Foundation Overload */
+
+body {
+  background: #eee;
 }
 
-.app-heading {
-    font-weight: bold;
+h1, h2, h3, h4, h5, h6 {
+  color: #666;
+}
+
+.alert-box .close {
+  color: #eee;
+  opacity: 0.95;
+}
+
+.reveal-modal {
+  padding: 0.825rem;
+  min-height: none;
+}
+
+.reveal-modal .row.title {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 0.625em;
+}
+
+.button-group>li {
+  margin:0;
+}
+
+.button-bar .button-group {
+  margin-right:0;
+}
+
+.button-bar .button-group li:first-child a {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.button-bar .button-group li:last-child a {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+button.small, .button.small {
+  padding-top: 0.8125rem;
+  padding-bottom: 0.8125rem;
+}
+
+@media only screen and (max-width: 40.063em) {
+  button.small, .button.small {
+    padding-top: 0.5625rem;
+    padding-bottom: 0.5625rem;*
+    padding-right:  1.125rem;
+    padding-left: 1.125rem;
+  }
+}
+
+table { margin-bottom: 0.5em; }
+
+td.btn { padding: 0;}
+
+td input, td select {margin:0 !important;}
+
+td.switch {
+  text-align: center;
+}
+
+td .button {
+  margin-bottom: 0;
+  padding: 0.8125rem 1.5rem;
+}
+
+.tabs dd.active a, .tabs .tab-title.active a {
+  background: #666;
+  color: white;
+}
+
+.tabs dd > a, .tabs .tab-title > a {
+  color: #666;
+  padding: 0.5rem 1.375rem;
+}
+
+header { padding: 0 3rem;}
+
+input[type="file"] {
+  color: #444;
+  height: 2.3125rem;
+  padding: 8px;
+}
+
+input[type="file"]::-webkit-file-upload-button {
+  visibility: hidden !important;
+  padding:0 !important;
+}
+
+input[type="file"]::before,
+input[type="file"]::-webkit-file-upload-button {
+  content: 'Select a file';
+  color: #eee;
+  display: inline-block;
+  background: #313366;
+  border: 1px solid #272952;
+  padding: 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  width:33%;
+  text-align: center;
+  position: absolute;
+  top:0;
+  left:0;
+   -webkit-transition: background-color .5s;
+  transition: background-color .5s;
+}
+
+input[type="file"]:hover::before {
+  background-color: #272952;
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s;
+}
+
+input[type="file"]:active {
+  outline: 0;
+}
+
+input[type="file"]:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9); 
+}
+
+
+/* Custom Style */
+
+
+/*
+*** Header ***
+*/
+
+.blue {background-color:#313366 !important;}
+.orange {background-color: #dd8728 !important;}
+.red {background-color: #9c210c !important;}
+.grey {background-color: #666 !important;}
+
+header h2 {color:#fff; margin-top:0.375rem; margin-bottom: 0.375rem;}
+
+@media only screen and (max-width: 40.063em) {
+  header h2 { margin:0; padding-top: 0.125em; padding-bottom: 0.125em;}
+  header section {margin:0;}
+}
+
+/*
+*** Section ***
+*/
+
+section {
+  margin: 1.25rem 2.5rem;
+  max-width: 960px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+section .title {
+  border-bottom : 1px solid #ccc;
+  margin-bottom: 0.625em;
+}
+
+section .title .button { margin-bottom: 0;}
+
+section .center { text-align: center; }
+
+section.container {
+  background-color: #fff;
+  -webkit-box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
+  border:1px solid #ccc;
+  padding: 0.625rem;
+  padding-bottom: 0.125rem;
+}
+
+section .no-jobs-item {
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 64.063em) and (min-width: 40.063em){
+  section.container {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
+
+@media only screen and (min-width: 40.063em) {
+  section { border-radius: 5px; }
+
+  section.container {
+    padding:0.8125rem;
+    padding-bottom:0.3125rem;
+  }
+}
+
+section > .row:not(.title) {
+  padding-top : 0.375rem;
+  padding-bottom: 0.375rem;
+  margin-bottom: 0.625em;
+  border-bottom: 1px solid #ccc;
+  line-height: 2.5rem;
+  vertical-align: middle;
+}
+
+section > .row:last-child {
+  padding-bottom: 0;
+  border-bottom: none;
+}
+
+/*
+*** Jobs ***
+*/
+
+.jobs-listing { color: #666; }
+.jobs-listing .name { font-size: 1.125rem; }
+.jobs-listing .option {
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: 0.9375em;
+  margin-left: -0.9375em;
+  background: #dd8728;
+  text-align: center;
+  color: #eee;
+}
+
+/*
+*** Colors ***
+*/
+td[type="color"] div {
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  margin-right: 0.75rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 3px rgba(0,0,0,0.4);
+}
+
+td[type="color"] div.selected {
+  box-shadow: inset 0 0 1rem 1rem rgba(255,255,255,0.5);
+}
+
+td[type="color"] div:hover {
+  cursor:pointer;
+}
+
+td[type="color"] div.add {
+  background : url('../img/icon_plus_cross.png') #fff no-repeat center;
+  background-size: 16px;
+}
+
+/* Special Custom Style : rotations et animations */
+.spinner {
+  -webkit-animation: rotator 1.4s linear infinite;
+  animation: rotator 1.4s linear infinite;
+}
+
+@-webkit-keyframes rotator {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(270deg);
+    transform: rotate(270deg);
+  }
+}
+
+@keyframes rotator {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(270deg);
+    transform: rotate(270deg);
+  }
+}
+.path {
+  stroke-dasharray: 187;
+  stroke-dashoffset: 0;
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+}
+
+@-webkit-keyframes colors {
+  0% {
+    stroke: #4285F4;
+  }
+  25% {
+    stroke: #DE3E35;
+  }
+  50% {
+    stroke: #F7C223;
+  }
+  75% {
+    stroke: #1B9A59;
+  }
+  100% {
+    stroke: #4285F4;
+  }
+}
+
+@keyframes colors {
+  0% {
+    stroke: #4285F4;
+  }
+  25% {
+    stroke: #DE3E35;
+  }
+  50% {
+    stroke: #F7C223;
+  }
+  75% {
+    stroke: #1B9A59;
+  }
+  100% {
+    stroke: #4285F4;
+ 
+  }
+}
+@-webkit-keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+  50% {
+    stroke-dashoffset: 46.75;
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: 187;
+    -webkit-transform: rotate(450deg);
+    transform: rotate(450deg);
+  }
+}
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+  50% {
+    stroke-dashoffset: 46.75;
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: 187;
+    -webkit-transform: rotate(450deg);
+    transform: rotate(450deg);
+  }
 }
