--- a/dashboard/apps/job_manager/css/style.css
+++ b/dashboard/apps/job_manager/css/style.css
@@ -49,7 +49,7 @@ button.small, .button.small {
 @media only screen and (max-width: 40.063em) {
   button.small, .button.small {
     padding-top: 0.5625rem;
-    padding-bottom: 0.5625rem;*
+    padding-bottom: 0.5625rem;
     padding-right:  1.125rem;
     padding-left: 1.125rem;
   }
@@ -59,7 +59,7 @@ table { margin-bottom: 0.5em; }
 
 td.btn { padding: 0;}
 
-td input {margin:0 !important;}
+td input, td select {margin:0 !important;}
 
 td.switch {
   text-align: center;
@@ -131,6 +131,11 @@ input[type="file"]:active::before {
 
 /* Custom Style */
 
+/*
+*** General ***
+*/
+
+.hidden { display:none; }
 
 /*
 *** Header ***
@@ -172,8 +177,23 @@ section.container {
   background-color: #fff;
   -webkit-box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
   border:1px solid #ccc;
-  padding: 0.625rem;
+  padding: 0.625rem 0.5rem;
   padding-bottom: 0.125rem;
+}
+
+section.current-job-container p {
+  font-size: 1.0625rem;
+  margin-bottom: 0;
+  color: #666;
+}
+
+section.current-job-container .btn {
+  padding-left:0;
+  padding-right:0;
+}
+
+section.current-job-container .button {
+  width: 100%;
 }
 
 section .no-jobs-item {
@@ -196,15 +216,7 @@ section .no-jobs-item {
   }
 }
 
-.jobs-listing {
-  color: #666;
-}
-
-.jobs-listing .name {
-  font-size: 1.125rem;
-}
-
-section > .row:not(.title) {
+section > .row:not(.title) , .separator{
   padding-top : 0.375rem;
   padding-bottom: 0.375rem;
   margin-bottom: 0.625em;
@@ -213,11 +225,17 @@ section > .row:not(.title) {
   vertical-align: middle;
 }
 
-section > .row:last-child {
+section > .row:last-child, section > .content:last-child  > .row {
   padding-bottom: 0;
   border-bottom: none;
 }
 
+/*
+*** Jobs ***
+*/
+
+.jobs-listing { color: #666; }
+.jobs-listing .name { font-size: 1.125rem; }
 .jobs-listing .option {
   padding-right: 0px;
   padding-left: 0px;
@@ -227,6 +245,65 @@ section > .row:last-child {
   text-align: center;
   color: #eee;
 }
+
+/*
+*** Colors ***
+*/
+td[type="color"] div {
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  margin-right: 0.75rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 3px rgba(0,0,0,0.4);
+}
+
+td[type="color"] div.selected {
+  box-shadow: inset 0 0 1rem 1rem rgba(255,255,255,0.5);
+}
+
+td[type="color"] div:hover {
+  cursor:pointer;
+}
+
+td[type="color"] div.add {
+  background : url('../img/icon_plus_cross.png') #fff no-repeat center;
+  background-size: 16px;
+}
+
+
+/*
+*** Tasks Lists ***
+*/
+
+tr.current {
+  background-color: rgba(221,135,40,0.8);
+}
+
+tr.current td { color:white; }
+
+td.delete:hover, td.edit:hover {
+  cursor:pointer;
+}
+
+td.delete, td.edit {
+  padding: 0 0.2rem;
+}
+
+td.delete span {
+  background-color: #9c210c;
+  color: #fff;
+  border-radius: 1rem;
+  padding: 0.3rem 0.5rem;
+}
+
+td.edit span{
+  background-color: #666;
+  color:#fff;
+  border-radius: 1rem;
+  padding: 0.3rem 0.5rem;
+}
+
 
 /* Special Custom Style : rotations et animations */
 .spinner {
