--- a/dashboard/apps/straight-lines/css/style.css
+++ b/dashboard/apps/straight-lines/css/style.css
@@ -49,7 +49,7 @@ button.small, .button.small {
 @media only screen and (max-width: 40.063em) {
   button.small, .button.small {
     padding-top: 0.5625rem;
-    padding-bottom: 0.5625rem;*
+    padding-bottom: 0.5625rem;
     padding-right:  1.125rem;
     padding-left: 1.125rem;
   }
@@ -131,6 +131,11 @@ input[type="file"]:active::before {
 
 /* Custom Style */
 
+/*
+*** General ***
+*/
+
+.hidden { display:none; }
 
 /*
 *** Header ***
@@ -172,7 +177,7 @@ section.container {
   background-color: #fff;
   -webkit-box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
   border:1px solid #ccc;
-  padding: 0.625rem;
+  padding: 0.625rem 0.5rem;
   padding-bottom: 0.125rem;
 }
 
@@ -196,7 +201,7 @@ section .no-jobs-item {
   }
 }
 
-section > .row:not(.title) , section > .content > .row:not(.title) {
+section > .row:not(.title) , .separator{
   padding-top : 0.375rem;
   padding-bottom: 0.375rem;
   margin-bottom: 0.625em;
@@ -266,14 +271,22 @@ td.delete:hover, td.edit:hover {
   cursor:pointer;
 }
 
-td.delete {
-  background-color:#9c210c;
-  color:#fff;
+td.delete, td.edit {
+  padding: 0 0.2rem;
 }
 
-td.edit {
+td.delete span {
+  background-color: #9c210c;
+  color: #fff;
+  border-radius: 1rem;
+  padding: 0.3rem 0.5rem;
+}
+
+td.edit span{
   background-color: #666;
   color:#fff;
+  border-radius: 1rem;
+  padding: 0.3rem 0.5rem;
 }
 
 
