--- a/dashboard/apps/straight-lines/css/custom.css
+++ b/dashboard/apps/straight-lines/css/custom.css
@@ -1,1 +1,21 @@
-#myCanvas { width: 100%; }
+#canvas-container {
+
+}
+
+#myCanvas {
+	max-width: 100%;
+	display: block;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.invert-pos {
+	float: right;
+	margin-top: 3.4275rem;
+	padding: 0;
+	color: #666;
+}
+
+.invert-pos:hover{
+	cursor: pointer;
+}
