--- a/dashboard/apps/2d_drawer/css/custom.css
+++ b/dashboard/apps/2d_drawer/css/custom.css
@@ -9,6 +9,14 @@ header h2 {
 	text-align: right;
 }
 
+h3 {
+	margin-top : 0;
+	margin-bottom : 0.375rem;
+	font-size : 1.375rem;
+}
+
+h4 { font-size : 1.125rem; }
+
 section {
 	max-width: 100%;
 	margin-top: 0;
@@ -16,12 +24,40 @@ section {
 	border-radius: 0;
 }
 
-section.container {
-	padding: 0;
+section.container { padding: 0; }
+
+.row { max-width: 100%; }
+
+button, .button { margin-bottom : 0; }
+
+input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"],
+input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"],
+input[type="tel"], input[type="time"], input[type="url"], input[type="color"], textarea {
+	height : 32px;
+	height : 2rem;
+	margin-bottom : 6px;
+	margin-bottom : 0.5rem;
+	padding : 2px 4px 2px 8px;
+	padding : 0.125rem 0.25rem 0.125rem 0.5rem;
 }
 
-.row {
-	max-width: 100%;
+.switch.small label {
+	width : 48px;
+	width : 3rem;
+	height : 24px;
+	height : 1.5rem;
+}
+
+.switch.small label:after {
+	width : 16px;
+	height : 16px;
+	width : 1rem;
+	height : 1rem;
+}
+
+.switch.small input:checked+label:after {
+	left : 28px;
+	left : 1.75rem;
 }
 
 
@@ -34,6 +70,7 @@ section.container {
 	display: block;
 	margin-left:auto;
 	margin-right:auto;
+	-webkit-user-select: ;
 }
 
 .invert-pos {
@@ -43,7 +80,4 @@ section.container {
 	color: #666;
 }
 
-.invert-pos:hover{
-	cursor: pointer;
-}
-
+.invert-pos:hover{ cursor: pointer; }
