--- a/dashboard/apps/2d_drawer/css/custom.css
+++ b/dashboard/apps/2d_drawer/css/custom.css
@@ -17,6 +17,19 @@ h3 {
 
 h4 { font-size : 1.125rem; }
 
+.tabs dd > a, .tabs .tab-title > a {
+	padding: 0.25rem 0.25rem;
+}
+
+.tabs dd > a img, .tabs .tab-title > a img {
+	width: 1.375rem;
+	height: 1.375rem;
+}
+
+.tabs dd.active a, .tabs .tab-title.active a{
+	background-color: white;
+}
+
 section {
 	max-width: 100%;
 	margin-top: 0;
