--- a/dashboard/apps/configuration/css/style.css
+++ b/dashboard/apps/configuration/css/style.css
@@ -1,9 +1,5 @@
 /* Foundation OverWrite */
 
-  .CodeMirror {
-  border: 1px solid #eee;
-  height: auto;
-}
 body {
   background: #eee;
 }
@@ -12,6 +8,9 @@ h1, h2, h3, h4, h5, h6 {
   color: #666;
 }
 
+fieldset {
+  color: #000000;
+}
 .job-failed {
   color: #ff0000;
 }
