--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -10,6 +10,14 @@ body,html{
     font-family: 'source_sans_proregular';
 }
 
+.on {
+	color: #ffffff;
+}
+
+.off {
+	color: #ba6455;
+}
+
 .main-section, .app-section{ 
 	height: auto;
 	margin-top: 45px;
