--- a/dashboard/apps/macro_manager/css/style.css
+++ b/dashboard/apps/macro_manager/css/style.css
@@ -8,6 +8,16 @@ h1, h2, h3, h4, h5, h6 {
   color: #666;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+}
+
 td.details-control {
     background: url('images/details_open.png') no-repeat center center;
     width: 40px;
