--- a/dashboard/apps/app_manager/css/style.css
+++ b/dashboard/apps/app_manager/css/style.css
@@ -1,26 +1,71 @@
-/* Foundation OverWrite */
-
 body {
   background: #eee;
 }
- 
-h1, h2, h3, h4, h5, h6 {
-  color: #666;
+
+.delete-button {
+  background-image: url('../images/ex.png');
+  background-size: 100% 100%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
 
-#holder { 
+#dropzone { 
   border: 5px solid transparent;
   border-radius: 5px;   
 }
 
-#holder.hover { 
+#dropzone .hovershow {
+  opacity: 0.0;
+} 
+
+#dropzone .hoverdim {
+  opacity: 1.0;
+}
+
+#dropzone.hover { 
   border: 5px dashed #ccc; 
-  border-radius: 5px; 
+  border-radius: 5px;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -o-transition: all .2s ease;
+}
+ 
+#dropzone.hover .hovershow {
+  opacity: 1.0;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -o-transition: all .2s ease;
+
+}
+
+#dropzone.hover .hoverdim {
+  opacity: 0.2;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -o-transition: all .2s ease;
+
+}
+
+#dropzone .message {
+  z-index: 3;
+  display: block; 
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+  font-style: italic;
+  width:100%;
+  margin: 0 0 0 -50%;
+  opacity: 0%;
 }
 
 .app-icon {
   width: 50px;
   height: 50px;
+  min-width: 50px;
   border-radius: 5px;
   padding: 5px;
   box-shadow: 3px 3px 3px #aaaaaa;
