Close #120 (Select issues with zero buttons)

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -10,6 +10,15 @@ body,html{
     font-family: 'source_sans_proregular';
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .on {
 	color: #ffffff;
 }
