Add support for unit display in the dashboard

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -489,7 +489,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	margin-top: 0.1925rem;
 }
 
-#position ul .axis .in {
+#position ul .axis .units {
 	font-size: 12px;
 	font-size: 0.75rem;
 	text-transform: lowercase;
