In job history + button now displays historical events and all further actions have been placed under the ellipses

--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -77,8 +77,9 @@ td.details-control {
     cursor: pointer;
 }
 
-td.preview-control {
-    background: url('images/preview.png') no-repeat center center;
+td.actions-control {
+    font-size: 2em;
+    transform: translateY(-8px);
     width: 80px;
     cursor: pointer;
     content: attr('Preview Job');
